tests/ui/consts/miri_unleashed/box.stderr
error[E0080]: could not evaluate static initializer
  --> $DIR/box.rs:8:11
   |
LL |     &mut *(Box::new(0))
   |           ^^^^^^^^^^^^^ calling non-const function `Box::<i32>::new`

warning: skipping const checks
   |
help: skipping check that does not even have a feature gate
  --> $DIR/box.rs:8:11
   |
LL |     &mut *(Box::new(0))
   |           ^^^^^^^^^^^^^
help: skipping check for `const_mut_refs` feature
  --> $DIR/box.rs:8:5
   |
LL |     &mut *(Box::new(0))
   |     ^^^^^^^^^^^^^^^^^^^
help: skipping check that does not even have a feature gate
  --> $DIR/box.rs:8:5
   |
LL |     &mut *(Box::new(0))
   |     ^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0080`.
